...
    
    func setpuUI() {
        presenter.assetsVC = self
        backUpView()
        setupStatusBar()
        registerCells()
        tableView.accessibilityIdentifier = "AssetsTableView"
        tableView.addSubview(self.refreshControl)
        view.isUserInteractionEnabled = false
        navigationController?.setNavigationBarHidden(true, animated: false)
        view.addSubview(loader)
    }
    
...
