//Copyright 2018 Idealnaya rabota LLC
//Licensed under Multy.io license.
//See LICENSE for details

import XCTest
import Firebase

@testable import Multy

class MultyUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
        testChangeWalletName()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
    }
    
    func testChangeWalletName() {
//        let app = XCUIApplication()
//        let tableView = app.tables["AssetsTableView"]
//
//        let cell = tableView.cells.containing(.cell, identifier: "-1")
//        let cellElement = cell.staticTexts["BTCE"]
        
//        app.tables["AssetsTableView"].staticTexts["BTC"].tap()
        
//        let app = XCUIApplication()
//        app.otherElements.containing(.cell, identifier:"0").children(matching: .other).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.tap()
//        
//        let element = app.children(matching: .window).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element
//        element.tap()
//        element.tap()
//        element.tap()
//        app.typeText("nnnnn")
//        element.tap()
//        element.tap()
        
    }
}
